--- a/styles/scrollbar.scss
+++ b/styles/scrollbar.scss
@@ -1,36 +1,35 @@
 html {
-  --scroll-bg: #f5f5f5;
-  --thumb-bg: #999;
+  --scroll-width: 6px;
+  --scroll-height: 6px;
+  --scrollbar-bg: #f1f1f1;
+  --scroll-divider-light: rgba(140, 140, 140, 42%);
+  --scroll-divider-dark: rgba(140, 140, 140, 100%);
 }
 
 html.dark {
-  --scroll-bg: #212425;
-  --thumb-bg: #414749;
-}
-
-*::-webkit-scrollbar {
-  width: 8px;
+  --scrollbar-bg: #111;
+  --scroll-divider-light: rgba(200, 200, 200, 12%);
+  --scroll-divider-dark: rgba(200, 200, 200, 48%);
 }
 
 * {
   scrollbar-width: thin;
-  scrollbar-color: var(--scroll-bg) var(--thumb-bg);
+  scrollbar-color: var(--scroll-divider-light) var(--scrollbar-bg);
 }
 
-*::-webkit-scrollbar-track {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: var(--scroll-bg);
+::-webkit-scrollbar {
+  width: var(--scroll-width);
+  height: var(--scroll-height);
 }
 
-*::-webkit-scrollbar-thumb {
-  background-color: var(--thumb-bg);
-  background-image: -webkit-gradient(
-    linear,
-    0 0,
-    0 100%,
-    color-stop(50%, rgba(255, 255, 255, 20%)),
-    color-stop(50%, transparent),
-    to(transparent)
-  );
+::-webkit-scrollbar-track {
+  background: var(--scrollbar-bg);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scroll-divider-light);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--scroll-divider-dark);
 }
